# wos-ai-plugins

./: CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  diff.txt
plugins/blender/SnapdragonImageGeneration/: README.md  __init__.py  install.bat  install.py  qairt_constants.py  requirements.txt  utils.py
plugins/blender/SnapdragonImageGeneration/docs/resources/: Thumbs.db
plugins/blender/SnapdragonImageGeneration/model_pipelines/: ControlNetCanny.py
plugins/chrome/on-device-summarization/: README.md  background.js  manifest.json  package-lock.json  package.json
plugins/chrome/on-device-summarization/scripts/: extract-content.js
plugins/chrome/on-device-summarization/sidepanel/: index.js
plugins/gimp/stable-diffusion/: .gitignore  CMakeLists.txt  README.md  build_plugin.ps1  components.vsconfig  vcpkg.json
plugins/gimp/stable-diffusion/config/: htp_backend_ext_config.json  injected.stablediffusion.properties.in  sample_prompt_list.txt
plugins/gimp/stable-diffusion/docs/: build.md  install.md
plugins/gimp/stable-diffusion/scripts/: install_plugin.bat  install_plugin.ps1
plugins/gimp/stable-diffusion/src/: .gitignore  main.cpp
plugins/gimp/stable-diffusion/src/data_loader/: README.md
plugins/gimp/stable-diffusion/src/data_loader/include/: DataLoader.h
plugins/gimp/stable-diffusion/src/data_loader/src/: DataLoader.cpp
plugins/gimp/stable-diffusion/src/data_loader/tools/: flatten.py
plugins/gimp/stable-diffusion/src/helpers/: Client.cpp  Client.hpp  GetOpt.cpp  GetOpt.hpp  Helpers.cpp  Helpers.hpp  QnnApiHelpers.cpp  QnnApiHelpers.hpp  RuntimeApiHelpers.cpp  RuntimeApiHelpers.hpp  UiHelper.cpp  UiHelper.h
plugins/gimp/stable-diffusion/src/qnn/: BackendExtensions.cpp  ClientBuffer.cpp  IOTensor.cpp  QnnApi.cpp  QnnApiUtils.cpp  RpcMem.cpp  SampleAppContextCaching.fbs
plugins/gimp/stable-diffusion/src/qnn/include/: BackendExtensions.hpp  ClientBuffer.hpp  IBackend.hpp  IBufferAlloc.hpp  ICommandLineManager.hpp  IOTensor.hpp  Log.hpp  NetRunBackend.hpp  QnnApi.hpp  QnnApiUtils.hpp  QnnConfig.hpp  QnnTypeDef.hpp  QnnTypeMacros.hpp  QnnWrapperUtils.hpp  RpcMem.hpp  SampleAppContextCaching_generated.h
plugins/gimp/stable-diffusion/src/scheduler/: .gitignore
plugins/gimp/stable-diffusion/src/scheduler/include/: Scheduler.hpp
plugins/gimp/stable-diffusion/src/scheduler/src/: Scheduler.cpp
plugins/gimp/stable-diffusion/src/stable_diffusion/include/: StableDiffusionHelper.hpp
plugins/gimp/stable-diffusion/src/stable_diffusion/src/: StableDiffusionHelper.cpp
plugins/gimp/stable-diffusion/src/tokenizer/: .gitignore  Cargo.toml  config.toml  tokenizer.py
plugins/gimp/stable-diffusion/src/tokenizer/src/: lib.rs
plugins/gimp/stable-diffusion/ui/: __init__.py  sd-snapdragon.py
plugins/local-rag-app/: .gitignore  Cargo.toml  Genie.lib  README.md  build.rs  build_plugin.ps1  wrapper.h
plugins/local-rag-app/Genie/: GenieCommon.h  GenieDialog.h  GenieEmbedding.h
plugins/local-rag-app/src/: api_server.rs  backend_call.rs  errors.rs  knowledge_base.rs  lib.rs  main.rs  npu_backend.rs
plugins/local-rag-app/src/database/: hora.rs  mod.rs  sql_database.rs  vectordb.rs
plugins/local-rag-app/src/documents/: document.rs  document_util.rs  mod.rs
plugins/local-rag-app/src/models/: mod.rs  model.rs
plugins/stable-diffusion-webui/qairt_accelerate/: README.md  common_utils.py  install.py  pipeline_cache.py  pipeline_utils.py  qairt_constants.py  qairt_hub_models.py  qairt_sd_controlnet_pipeline.py  qairt_sd_pipeline.py  qairt_sd_unclip_pipeline.py  ui-config.json
plugins/stable-diffusion-webui/qairt_accelerate/scripts/: qairt_accelerate.py
plugins/vscode/qairt-code-gen/: .gitignore  LICENSE  README.md  build.ps1  package-lock.json  package.json  webpack.config.js
plugins/vscode/qairt-code-gen/server/: .gitignore  CMakeLists.txt  build.ps1
plugins/vscode/qairt-code-gen/server/configs/: htp_backend_ext_config.json
plugins/vscode/qairt-code-gen/server/configs/llama2-7b/: llama2-7b-htp-windows.json
plugins/vscode/qairt-code-gen/server/configs/llama3p1-8b/: llama3p1-8b-htp-windows.json
plugins/vscode/qairt-code-gen/server/include/: httplib.h
plugins/vscode/qairt-code-gen/server/include/Genie/: GenieCommon.h  GenieDialog.h  GenieEmbedding.h
plugins/vscode/qairt-code-gen/server/models/: htp_backend_ext_config.json
plugins/vscode/qairt-code-gen/server/src/: qcom-code-gen-server.cpp
plugins/vscode/qairt-code-gen/shared/: example-prompt.ts  extension-state.ts  features.ts  model.ts  profile.ts  server-state.ts  side-panel-message.ts
plugins/vscode/qairt-code-gen/side-panel-ui/: index.html  package.json  vite.config.ts
plugins/vscode/qairt-code-gen/side-panel-ui/src/: App.tsx  main.tsx  use-extension-state.ts  vite-env.d.ts
plugins/vscode/qairt-code-gen/side-panel-ui/src/utils/: vscode.ts
plugins/vscode/qairt-code-gen/src/: configuration.ts  constants.ts  extension-component.interface.ts  extension.ts  lru-cache.decorator.ts  state.ts
plugins/vscode/qairt-code-gen/src/c-plus-plus-server/: c-plus-plus-server.service.ts  commands-runner.ts  detect-os.ts  proxy.ts  server-log.ts  server-runner.ts  server-state-controller.ts
plugins/vscode/qairt-code-gen/src/docstring/: completion-item-provider.ts  generate-command.ts  generate-docstring.ts  index.ts
plugins/vscode/qairt-code-gen/src/docstring/docstring-template/: docstring-factory.ts  docstring-parts.ts  get-template.ts  index.ts  template-data.ts
plugins/vscode/qairt-code-gen/src/docstring/parse/: index.ts  (+11 more)
plugins/vscode/qairt-code-gen/src/inline-completion/: command-inline-completion-provider.ts  completion.service.ts  index.ts  inline-completion-component.ts  streaming-command-inline-completion-provider.ts  streaming-inline-completion-component.ts  tab.ts
plugins/vscode/qairt-code-gen/src/services/: backend.service.ts  connection.service.ts  notification.service.ts  status-bar.service.ts
plugins/vscode/qairt-code-gen/src/settings/: settings.service.ts
plugins/vscode/qairt-code-gen/src/side-panel/: index.ts  side-panel-message-handler.ts  side-panel-view-provider.ts
(+14 files in other folders)
