[package]
name = "local_rag_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.71.0"

[dependencies]
libloading = "0.8.6"
quick-xml = "0.22"
clap = { version = "4.3.4", features = ["derive"] }
hora = "0.1.1"
minidom = "0.15.2"
pdf-extract = "0.7.6"
rayon = "1.7.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.164"
toml = "0.8.12"
zip = "2.2.2"
anyhow = "*"
axum = { version = "*", features = ["multipart", "tracing"] }
lopdf = "*"
tokio = { version = "*", features = ["full"] }
serde_json = "*"
tracing-subscriber = "*"
parking_lot = "0.12"
async-lock = "*"
fastembed = "=3.6.0"
ort = "=2.0.0-rc.0"
ort-sys = "=2.0.0-rc.0"
backtrace = "0.3"
lazy_static = "1.4"
tower-http = { version = "0.6.2", features = ["full"] }
tower = "*"
http = "1.3.1"
text-splitter= "0.25.1"