
[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "= 0.2.147"
tokenizers = "= 0.13.3"
lazy_static = "= 1.4.0"

# Dependencies for the 'x86_64-unknown-linux-gnu' and 'aarch64-linux-android' target only
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
openssl = { version = "0.10.35", features = ["vendored"] }

[profile.release]
debug = false
strip = true
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
